IJPL-214795 [java-completion] Basic method references support
GitOrigin-RevId: 4852c7e6dd73df2347f76583396a7d5c32953aec